[gd_scene load_steps=9 format=3 uid="uid://2xyg6tlw3nhx"]

[ext_resource type="Script" uid="uid://lihfk50qncv6" path="res://scenes/UI/ranking.gd" id="1_htgm4"]
[ext_resource type="Texture2D" uid="uid://dsrm3jl8lnnoa" path="res://Assets/UI/titles/ranking.png" id="1_t0dx1"]
[ext_resource type="Texture2D" uid="uid://ch8u4cg8kn7gb" path="res://Assets/UI/Buttons/g58.png" id="2_htgm4"]
[ext_resource type="PackedScene" uid="uid://dagjpaawdw1ke" path="res://scenes/system/ground_loby.tscn" id="2_j08wu"]
[ext_resource type="Texture2D" uid="uid://cm2vfjc2cckek" path="res://Assets/UI/Buttons/g59.png" id="3_j08wu"]
[ext_resource type="AudioStream" uid="uid://bvopfer4cy67e" path="res://Assets/Audio/music/sfx/menu_select.ogg" id="6_ey0uf"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ey0uf"]
texture = ExtResource("2_htgm4")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ndkgq"]
texture = ExtResource("3_j08wu")

[node name="Ranking" type="Node2D"]
script = ExtResource("1_htgm4")

[node name="GroundLoby" parent="." instance=ExtResource("2_j08wu")]
position = Vector2(0, 240)

[node name="Ranking" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="Ranking"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 12.0
offset_top = 51.0
offset_right = 179.0
offset_bottom = 263.0
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="Ranking/Panel"]
position = Vector2(86, 2)
scale = Vector2(0.16319437, 0.16319445)
texture = ExtResource("1_t0dx1")

[node name="BoxContainer" type="BoxContainer" parent="Ranking/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.5
offset_top = -86.0
offset_right = 54.5
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Ranking/Panel/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Gabmbiarra" type="Label" parent="Ranking/Panel/BoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "                          "

[node name="Gabmbiarra2" type="Label" parent="Ranking/Panel/BoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 1
text = "                          "

[node name="VBoxRanking" type="VBoxContainer" parent="Ranking/Panel/BoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Gabmbiarra3" type="Label" parent="Ranking/Panel/BoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 1
text = "                          "

[node name="Gabmbiarra4" type="Label" parent="Ranking/Panel/BoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 1
text = "                          "

[node name="BtnReturn" type="Button" parent="Ranking/Panel/BoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_ey0uf")
theme_override_styles/hover = SubResource("StyleBoxTexture_ndkgq")
text = "Retornar"

[node name="Audio" type="Node" parent="."]

[node name="ASPUiEfect" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("6_ey0uf")

[node name="ASPAmbience" type="AudioStreamPlayer" parent="Audio"]

[connection signal="pressed" from="Ranking/Panel/BoxContainer/VBoxContainer/BtnReturn" to="." method="_on_btn_return_pressed"]
